Added All Leads dropdown + update_status improvements

--- a/templates/analytics.html
+++ b/templates/analytics.html
@@ -22,8 +22,8 @@
           Export Data
         </button>
         <div class="dropdown-menu dropdown-menu-end shadow">
-          <a class="dropdown-item" href="{{ url_for('export_closed_leads') }}">
-            <i class="ti ti-file-spreadsheet me-2"></i> Export All Leads (CSV)
+          <a class="dropdown-item" href="{{ url_for('export_leads') }}">
+            <i class="ti ti-file-spreadsheet me-2"></i> Export Active Leads (CSV)
           </a>
           <a class="dropdown-item" href="{{ url_for('export_closed_leads') }}">
             <i class="ti ti-archive me-2"></i> Export Closed Leads (CSV)
